--- a/dashboard.html
+++ b/dashboard.html
@@ -500,7 +500,7 @@
                     <p style="margin-bottom: 15px; color: #666;">
                         Please have the customer sign below using touch or stylus
                     </p>
-                    anvas id="signatureCanvas" class="signature-canvas" width="800" height="200"></canvas>
+                    <canvas id="signatureCanvas" class="signature-canvas" width="800" height="200"></canvas>
                     <div class="signature-buttons">
                         <button class="sig-btn clear-sig-btn" onclick="clearSignature()">🗑️ Clear</button>
                         <button class="sig-btn save-sig-btn" onclick="saveSignature()">✅ Complete Pickup</button>
@@ -764,3 +764,4 @@
     </script>
 </body>
 </html>
+
