--- a/archived.html
+++ b/archived.html
@@ -22,6 +22,7 @@
     </div>
 
     <script src="common.js"></script>
-    <script src="archived.js"></script>
+    <script src="archive.js"></script>
 </body>
 </html>
+
