Add company logo and fix Staff Login button overlap

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%);
             color: white;
             padding: 40px;
+                        padding-top: 60px; /* Space for Staff Login button */
             text-align: center;
             position: relative;
         }
@@ -219,6 +220,11 @@
     </style>
 </head>
 <body>
+        <!-- Company Logo -->
+    <div style="text-align: center; padding: 20px 0; background: white;">
+        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 600px; width: 90%; height: auto;">
+    </div>
+
     <div class="main-container">
         <div class="header">
             <div class="staff-menu">
@@ -344,3 +350,4 @@
     </script>
 </body>
 </html>
+
