--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
 </head>
 <body>
         <!-- Company Logo -->
-    <div style="text-align: center; padding: 20px 0; background: white;">
-        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 600px; width: 90%; height: auto;">
+    <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; text-align: center; padding: 20px 0; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 600px; width: 90%; height: auto;">
     </div>
 
     <div class="main-container">
@@ -350,4 +349,5 @@
     </script>
 </body>
 </html>
+
 
