--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         }
         .main-container {
             max-width: 900px;
+                        margin-top: 140px;
             width: 90%;
             background: white;
             border-radius: 20px;
@@ -349,5 +350,6 @@
     </script>
 </body>
 </html>
+
 
 
