--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         }
         .main-container {
             max-width: 900px;
-                        margin-top: 140px;
-            width: 90%;
+            margin-top: 100px;            width: 90%;
             background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
@@ -27,15 +26,12 @@
         .header {
             background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%);
             color: white;
-            padding: 40px;
-                        padding-top: 60px; /* Space for Staff Login button */
-            text-align: center;
+                        padding-top: 50px; /* Space for Staff Login button */            text-align: center;
             position: relative;
         }
         .header h1 {
             margin: 0;
-            font-size: 2.5em;
-        }
+            font-size: 1.8em;        }
         .staff-menu {
             position: absolute;
             top: 20px;
@@ -350,6 +346,7 @@
     </script>
 </body>
 </html>
+
 
 
 
