Add padding to header

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         .header {
             background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%);
             color: white;
+                        padding: 15px;
                         padding-top: 50px; /* Space for Staff Login button */            text-align: center;
             position: relative;
         }
@@ -346,6 +347,7 @@
     </script>
 </body>
 </html>
+
 
 
 
