--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         }
         .main-container {
             max-width: 900px;
-            margin-top: 100px;            width: 90%;
-            background: white;
+            margin-top: 140px;            width: 90%;            background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
             overflow: hidden;
@@ -26,14 +25,17 @@
         .header {
             background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%);
             color: white;
-                        padding: 15px;
-                        padding-top: 50px; /* Space for Staff Login button */            text-align: center;
-            position: relative;
+                        padding-top: 60px; /* Space for Staff Login button */                        text-align: center;            position: relative;
         }
+
+                .header img {
+                                max-height: 60px;
+                                width: auto;
+                                display: block;
+                            }
         .header h1 {
             margin: 0;
-            font-size: 1.8em;        }
-        .staff-menu {
+            font-size: 2.5em;            }        .staff-menu {
             position: absolute;
             top: 20px;
             right: 20px;
@@ -219,7 +221,7 @@
 </head>
 <body>
         <!-- Company Logo -->
-    <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; text-align: center; padding: 20px 0; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 600px; width: 90%; height: auto;">
+    <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; text-align: center; padding: 20px 0; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">        <img src="35.png" alt="Superior Audio & Video" style="max-width: 600px; width: 90%; height: auto;">
     </div>
 
     <div class="main-container">
@@ -347,6 +349,7 @@
     </script>
 </body>
 </html>
+
 
 
 
