--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         }
 
                 .header img {
-                                max-height: 60px;
-                                width: auto;
+            max-height: 120px;                                width: auto;
+                                max-width: 500px;
                                 display: block;
                             }
         .header h1 {
@@ -349,6 +349,7 @@
     </script>
 </body>
 </html>
+
 
 
 
