--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         }
         .main-container {
             max-width: 900px;
-            margin-top: 140px;            width: 90%;            background: white;
-            border-radius: 20px;
+            margin-top: 110px;            width: 90%;            background: white;            border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
             overflow: hidden;
         }
@@ -29,9 +28,7 @@
         }
 
                 .header img {
-            max-height: 120px;                                width: auto;
-                                max-width: 500px;
-                                display: block;
+            max-height: 80px;                                display: block;
                             }
         .header h1 {
             margin: 0;
@@ -349,6 +346,7 @@
     </script>
 </body>
 </html>
+
 
 
 
