Replace logo with text header - transparent background

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         }
         .main-container {
             max-width: 900px;
-            margin-top: 110px;            width: 90%;            background: white;            border-radius: 20px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            margin-top: 70px;            width: 90%;            background: white;            border-radius: 20px;            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
             overflow: hidden;
         }
         .header {
@@ -27,9 +26,6 @@
                         padding-top: 60px; /* Space for Staff Login button */                        text-align: center;            position: relative;
         }
 
-                .header img {
-            max-height: 80px;                                display: block;
-                            }
         .header h1 {
             margin: 0;
             font-size: 2.5em;            }        .staff-menu {
@@ -217,10 +213,10 @@
     </style>
 </head>
 <body>
-        <!-- Company Logo -->
-    <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; text-align: center; padding: 20px 0; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 600px; width: 90%; height: auto;">
+    <!-- Company Header -->
+    <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; text-align: center; padding: 15px 0; ">
+        <h1 style="margin: 0; color: #0891b2; font-size: 1.5em;">Superior Audio & Video - Parcel Tracking</h1>
     </div>
-
     <div class="main-container">
         <div class="header">
             <div class="staff-menu">
@@ -346,6 +342,7 @@
     </script>
 </body>
 </html>
+
 
 
 
