--- a/index.html
+++ b/index.html
@@ -213,9 +213,8 @@
     </style>
 </head>
 <body>
-    <!-- Company Header -->
-    <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; text-align: center; padding: 15px 0; ">
-        <h1 style="margin: 0; color: #0891b2; font-size: 1.5em;">Superior Audio & Video - Parcel Tracking</h1>
+    <!-- Company Logo -->
+    <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; text-align: center; padding: 20px 0; ">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 600px; width: 90%; height: auto;">
     </div>
     <div class="main-container">
         <div class="header">
@@ -342,6 +341,7 @@
     </script>
 </body>
 </html>
+
 
 
 
