Align logo container width with main-container (900px max-width)

--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
 </head>
 <body>
     <!-- Company Logo -->
-    <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; text-align: center; padding: 20px 0; ">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 600px; width: 90%; height: auto;">
-    </div>
+    <div style="position: fixed; top: 0; left: 50%; transform: translateX(-50%); z-index: 1000; text-align: center; padding: 20px 0; max-width: 900px; width: 90%;">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 100%; height: auto;">    </div>
     <div class="main-container">
         <div class="header">
             <div class="staff-menu">
@@ -341,6 +340,7 @@
     </script>
 </body>
 </html>
+
 
 
 
