--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         }
         .main-container {
             max-width: 900px;
-            margin-top: 70px;            width: 90%;            background: white;            border-radius: 20px;            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            overflow: hidden;
+            max-width: 900px;            width: 90%;            background: white;            border-radius: 20px;            box-shadow: 0 20px 60px rgba(0,0,0,0.3);            overflow: hidden;
         }
         .header {
             background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%);
@@ -214,8 +213,7 @@
 </head>
 <body>
     <!-- Company Logo -->
-    <div style="position: fixed; top: 0; left: 50%; transform: translateX(-50%); z-index: 1000; text-align: center; padding: 20px 0; max-width: 900px; width: 90%;">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 100%; height: auto;">    </div>
-    <div class="main-container">
+    <div style="text-align: center; padding: 20px 0; margin: 0 auto; max-width: 900px; width: 90%;">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 100%; height: auto;">    <div class="main-container">
         <div class="header">
             <div class="staff-menu">
                 <button class="staff-btn" onclick="openStaffLogin()">👤 Staff Login</button>
@@ -340,6 +338,7 @@
     </script>
 </body>
 </html>
+
 
 
 
