--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
     </style>
 </head>
 <body>
+        <div style="max-width: 900px; width: 90%; margin: 0 auto;">
     <!-- Company Logo -->
     <div style="text-align: center; padding: 20px 0; margin: 0 auto; max-width: 900px; width: 90%;">        <img src="company-logo.png" alt="Superior Audio & Video" style="max-width: 100%; height: auto;">    <div class="main-container">
         <div class="header">
@@ -340,6 +341,8 @@
 </html>
 
 
+
+    </div>
 
 
 
