Remove obsolete empty script tag from dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -524,7 +524,7 @@
         </div>
     </div>
 
-    <script src="tesseract.min.js"></script>
+        "></script>
     <script src="dashboard.js"></script>
     <script>
         // Check authentication
@@ -544,6 +544,7 @@
 
         // Dropdown toggle
         function toggleDropdown(id) {
+        527
             const dropdown = document.getElementById(id);
             const allDropdowns = document.querySelectorAll('.dropdown-menu');
             
@@ -773,5 +774,6 @@
     </script>
 </body>
 </html>
+
 
 
