--- a/index.html
+++ b/index.html
@@ -244,8 +244,10 @@
             </div>
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" id="staffPassword" placeholder="Enter password">
-            </div>
+                <div style="position: relative;">
+                    <input type="password" id="staffPassword" placeholder="Enter password" style="padding-right: 45px;">
+                    <button type="button" onclick="togglePassword()" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); background: none; border: none; cursor: pointer; font-size: 1.2em;" title="Show/Hide Password">👁️</button>
+                </div>            </div>
             <button class="login-btn" onclick="staffLogin()">Login</button>
         </div>
     </div>
@@ -336,6 +338,19 @@
         document.getElementById('staffModal').addEventListener('click', function(e) {
             if (e.target === this) closeStaffLogin();
         });
+
+            // Toggle password visibility
+    function togglePassword() {
+        const passwordField = document.getElementById('staffPassword');
+        const button = event.target;
+        if (passwordField.type === 'password') {
+            passwordField.type = 'text';
+            button.innerHTML = '🚫'; // Closed eye
+        } else {
+            passwordField.type = 'password';
+            button.innerHTML = '👁️'; // Open eye
+        }
+    }
     </script>
 </body>
 </html>
@@ -343,6 +358,7 @@
 
 
     </div>
+
 
 
 
