Add 5-day ready packages section to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -494,6 +494,14 @@
                     <div class="no-packages">Enter search criteria to find packages</div>
                 </div>
 
+
+                    <!-- 5-Day Ready Packages Section -->
+    <div id="fiveDaySection" style="display:none; margin-bottom: 20px;">
+        <h3>⚠️ Packages Ready 5+ Days</h3>
+        <p style="color: #d32f2f; margin-bottom: 10px;">The following packages have been ready for pickup for 5 or more days:</p>
+        <div id="fiveDayPackageList" style="margin-bottom: 15px;"></div>
+        <button onclick="markSelectedAsSentBack()" style="padding: 10px 20px; background: #d32f2f; color: white; border: none; border-radius: 4px; cursor: pointer;">📦 Mark Selected as Sent Back</button>
+    </div>
                 <!-- Signature Section -->
                 <div class="signature-section" id="signatureSection" style="display: none;">
                     <h3>✍️ Customer Signature</h3>
@@ -774,6 +782,7 @@
     </script>
 </body>
 </html>
+
 
 
 
