--- a/customers.html
+++ b/customers.html
@@ -48,6 +48,12 @@
                 <div class="form-group">
                     <label>Street Address *</label>
                     <input type="text" id="customerStreet" required>
+                                <div class="form-group">
+                <label style="display: flex; align-items: center; gap: 8px;">
+                    <input type="checkbox" id="customerLocked" style="width: auto;">
+                    <span>🔒 Lock Profile (Prevent automatic updates from parcel processing)</span>
+                </label>
+            </div>
                 </div>
                 <div class="form-group">
                     <label>Postal Code *</label>
